--- a/Blog.html
+++ b/Blog.html
@@ -25,13 +25,13 @@
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="gallery.html">Photo Gallery</a>
+          <a class="nav-link" href="Gallery.html">Photo Gallery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="projects.html">Projects</a>
+          <a class="nav-link" href="Projects.html">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="blog.html">My Blog</a>
+          <a class="nav-link" href="Blog.html">My Blog</a>
         </li>
       </ul>
     </div>
@@ -89,9 +89,9 @@
             <p>Use the buttons below to connect to the content of your choice.</p>
 			<div id="buttons">
 				<ul>
-					<li><a href="projects.html">Click Here to See Past Projects</a></li>
-					<li><a href="gallery.html">Click Here to Enter My Photo Gallery</a></li>
-                    <li><a href="blog.html">Click Here to View My Blog</a></li>
+					<li><a href="Projects.html">Click Here to See Past Projects</a></li>
+					<li><a href="Gallery.html">Click Here to Enter My Photo Gallery</a></li>
+                    <li><a href="Blog.html">Click Here to View My Blog</a></li>
 				</ul>
 			</div>
             </div>
