Added absolute links

--- a/Gallery.html
+++ b/Gallery.html
@@ -15,7 +15,7 @@
   
 <nav class="navbar navbar-expand-sm text-bg-dark navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><img src="images/logo.jpg" alt="personal logo"  class="rounded-circle" /></a>
+    <a class="navbar-brand" href="/"><img src="https://transfilmjunkie.github.io/tfjprofile/images/logo.jpg" alt="personal logo"  class="rounded-circle" /></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -41,7 +41,7 @@
       
       <header>
       <figure>
-       <img src="images/profile.jpg" alt="Hi! I'm Shaun, This is My Lovely Face!" class="bigcenter" />
+       <img src="https://transfilmjunkie.github.io/tfjprofile/images/profile.jpg" alt="Hi! I'm Shaun, This is My Lovely Face!" class="bigcenter" />
             <figcaption>
                 <h1>Shaun Patrick Bella</h1>
                 <h2>Bridging the Gap Between the Past and the Future</h2>
@@ -58,35 +58,35 @@
 			
             <div class = "row">
                 <div class = "col-lg-6">
-                    <img src="images/abstract.jpg" alt="close-up of metal bench" class="img-thumbnail" />
-                    <img src="images/dof.jpg" alt="depth-of-field demonstration" class="img-thumbnail" />
-                    <img src="images/reflection.jpg" alt="reflection of trees in water" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/abstract.jpg" alt="close-up of metal bench" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/dof.jpg" alt="depth-of-field demonstration" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/reflection.jpg" alt="reflection of trees in water" class="img-thumbnail" />
                 </div>
                 <div class = "col-lg-6">
-                    <img src="images/low-angle.jpg" alt="doll next to flowers" class="img-thumbnail" />
-                    <img src="images/motion.jpg" alt="large building with fountain in lake" class="img-thumbnail" />
-                    <img src="images/silhouette.jpg" alt="silhouette of lampost against sunset" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/low-angle.jpg" alt="doll next to flowers" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/motion.jpg" alt="large building with fountain in lake" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/silhouette.jpg" alt="silhouette of lampost against sunset" class="img-thumbnail" />
                 </div>
             </div>
 
             <div class = "row">
                 <h1>Film Camera Images</h1>
                 <div class = "col-lg-6">
-                    <img src="images/beach.jpg" alt="entrance to beach with fences" class="img-thumbnail" />
-                    <img src="images/berlin.jpg" alt="Berlin, MD street scene" class="img-thumbnail" />
-                    <img src="images/flowers.jpg" alt="field of pink flowers" class="img-thumbnail" />
-                    <img src="images/rides.jpg" alt="amusement rides" class="img-thumbnail" />
-                    <img src="images/treeline.jpg" alt="clump of trees near lake" class="img-thumbnail" />
-                    <img src="images/brownie1.jpg" alt="brownie shot #1" class="img-thumbnail-50%" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/beach.jpg" alt="entrance to beach with fences" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/berlin.jpg" alt="Berlin, MD street scene" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/flowers.jpg" alt="field of pink flowers" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/rides.jpg" alt="amusement rides" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/treeline.jpg" alt="clump of trees near lake" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/brownie1.jpg" alt="brownie shot #1" class="img-thumbnail-50%" />
                 </div>
                 <div class = "col-lg-6">
-                    <img src="images/boardwalk.jpg" alt="Rehoboth Beach boardwalk" class="img-thumbnail" />
-                    <img src="images/bw.jpg" alt="black and white shot of Rehoboth" class="img-thumbnail" />
-                    <img src="images/arch.jpg" alt="wooden arch in garden" class="img-thumbnail" />
-                    <img src="images/savannah.jpg" alt="vast savannah" class="img-thumbnail" />
-                    <img src="images/waves.jpg" alt="waves on beach" class="img-thumbnail" />
-                    <img src="images/brownie2.jpg" alt="brownie shot #2" class="img-thumbnail" />
-                    <img src="images/bunny.jpg" alt="beach bunny" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/boardwalk.jpg" alt="Rehoboth Beach boardwalk" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/bw.jpg" alt="black and white shot of Rehoboth" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/arch.jpg" alt="wooden arch in garden" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/savannah.jpg" alt="vast savannah" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/waves.jpg" alt="waves on beach" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/brownie2.jpg" alt="brownie shot #2" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/bunny.jpg" alt="beach bunny" class="img-thumbnail" />
                 </div>
             </div>
 
