--- a/Projects.html
+++ b/Projects.html
@@ -15,7 +15,7 @@
   
 <nav class="navbar navbar-expand-sm text-bg-dark navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><img src="images/logo.jpg" alt="personal logo"  class="rounded-circle" /></a>
+    <a class="navbar-brand" href="index.html"><img src="https://transfilmjunkie.github.io/tfjprofile/images/logo.jpg" alt="personal logo"  class="rounded-circle" /></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -41,7 +41,7 @@
       
       <header>
       <figure>
-       <img src="images/profile.jpg" alt="Hi! I'm Shaun, This is My Lovely Face!" class="bigcenter" />
+       <img src="https://transfilmjunkie.github.io/tfjprofile/images/profile.jpg" alt="Hi! I'm Shaun, This is My Lovely Face!" class="bigcenter" />
             <figcaption>
                 <h1>Shaun Patrick Bella</h1>
                 <h2>Bridging the Gap Between the Past and the Future</h2>
@@ -58,7 +58,7 @@
 			
             <div class = "row">
                 <div class = "col-lg-6">
-                    <img src="images/486.jpg" alt="retro PC build" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/486.jpg" alt="retro PC build" class="img-thumbnail" />
                     <p>I sratchbuilt this retro 486-powered PC from mostly period-correct parts, although I did add a few modern
                         conviniences, such as using a CF card for a hard drive, due to the finicky nature of vintage drives.
                         The case is a clone of the IBM XT that seems to have been originally intended for use as a 
@@ -79,7 +79,7 @@
                         </ul>  
                 </div>
                 <div class = "col-lg-6">
-                    <img src="images/modern.jpg" alt="modern PC" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/modern.jpg" alt="modern PC" class="img-thumbnail" />
                     <p>This machine is my baby, and my current modern PC. At the time that I built it, the market was experiencing a
                         major shortage of graphics cards (due to the chip shortages and the time being the peak of Bitcoin mining with graphics cards),
                         so I ended up cannibalizing some parts from an HP pre-built PC for this project. In addition, I was able to re-use some 
