--- a/Gallery.html
+++ b/Gallery.html
@@ -15,7 +15,7 @@
   
 <nav class="navbar navbar-expand-sm text-bg-dark navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><img src="https://transfilmjunkie.github.io/tfjprofile/images/logo.jpg" alt="personal logo"  class="rounded-circle" /></a>
+    <a class="navbar-brand" href="index.html"><img src="https://transfilmjunkie.github.io/tfjprofile/images/logo.jpg" alt="personal logo"  class="rounded-circle" /></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
