Update Gallery capitalization

--- a/Gallery.html
+++ b/Gallery.html
@@ -58,14 +58,14 @@
 			
             <div class = "row">
                 <div class = "col-lg-6">
-                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/abstract.jpg" alt="close-up of metal bench" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/Abstract.jpg" alt="close-up of metal bench" class="img-thumbnail" />
                     <img src="https://transfilmjunkie.github.io/tfjprofile/images/dof.jpg" alt="depth-of-field demonstration" class="img-thumbnail" />
                     <img src="https://transfilmjunkie.github.io/tfjprofile/images/reflection.jpg" alt="reflection of trees in water" class="img-thumbnail" />
                 </div>
                 <div class = "col-lg-6">
-                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/low-angle.jpg" alt="doll next to flowers" class="img-thumbnail" />
-                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/motion.jpg" alt="large building with fountain in lake" class="img-thumbnail" />
-                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/silhouette.jpg" alt="silhouette of lampost against sunset" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/Low-Angle.jpg" alt="doll next to flowers" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/Motion.jpg" alt="large building with fountain in lake" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/Silhouette.jpg" alt="silhouette of lampost against sunset" class="img-thumbnail" />
                 </div>
             </div>
 
@@ -77,7 +77,7 @@
                     <img src="https://transfilmjunkie.github.io/tfjprofile/images/flowers.jpg" alt="field of pink flowers" class="img-thumbnail" />
                     <img src="https://transfilmjunkie.github.io/tfjprofile/images/rides.jpg" alt="amusement rides" class="img-thumbnail" />
                     <img src="https://transfilmjunkie.github.io/tfjprofile/images/treeline.jpg" alt="clump of trees near lake" class="img-thumbnail" />
-                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/brownie1.jpg" alt="brownie shot #1" class="img-thumbnail-50%" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/brownie1.JPG" alt="brownie shot #1" class="img-thumbnail-50%" />
                 </div>
                 <div class = "col-lg-6">
                     <img src="https://transfilmjunkie.github.io/tfjprofile/images/boardwalk.jpg" alt="Rehoboth Beach boardwalk" class="img-thumbnail" />
