Update Projects capitalization

--- a/Projects.html
+++ b/Projects.html
@@ -58,7 +58,7 @@
 			
             <div class = "row">
                 <div class = "col-lg-6">
-                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/486.jpg" alt="retro PC build" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/486.JPG" alt="retro PC build" class="img-thumbnail" />
                     <p>I sratchbuilt this retro 486-powered PC from mostly period-correct parts, although I did add a few modern
                         conviniences, such as using a CF card for a hard drive, due to the finicky nature of vintage drives.
                         The case is a clone of the IBM XT that seems to have been originally intended for use as a 
@@ -79,7 +79,7 @@
                         </ul>  
                 </div>
                 <div class = "col-lg-6">
-                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/modern.jpg" alt="modern PC" class="img-thumbnail" />
+                    <img src="https://transfilmjunkie.github.io/tfjprofile/images/modern.JPG" alt="modern PC" class="img-thumbnail" />
                     <p>This machine is my baby, and my current modern PC. At the time that I built it, the market was experiencing a
                         major shortage of graphics cards (due to the chip shortages and the time being the peak of Bitcoin mining with graphics cards),
                         so I ended up cannibalizing some parts from an HP pre-built PC for this project. In addition, I was able to re-use some 
