--- a/Projects.html
+++ b/Projects.html
@@ -112,8 +112,11 @@
 		    <div class = "column">
 			    <h3>This Profile Page</h3>
 			    <img src="https://transfilmjunkie.github.io/tfjprofile/images/profile.png" alt= "profile homepage" class="img-thumbnail" />
-			    <p>Click the link below to view the Github repository for this build</p>
-			    <a href="
+			  
+			    <a href="https://github.com/TransFilmJunkie/tfjprofile"> Click the link to view the Github repository for this build</a>
+			    <br>
+			    <p>This page showcases my abilities in designing websites with HTML and CSS. I intend to add some Javascript elements to this page as soon as I 
+			    decide what to make.</p>
 
 
             <div class = "col">
