--- a/Projects.html
+++ b/Projects.html
@@ -109,7 +109,7 @@
 
 	    <div class = "row">
 		    <h1>Software and Web Builds</h1>
-		    <div class = "column">
+		    <div class = "col">
 			    <h3>This Profile Page</h3>
 			    <img src="https://transfilmjunkie.github.io/tfjprofile/images/profile.png" alt= "profile homepage" class="img-thumbnail" />
 			  
@@ -117,6 +117,8 @@
 			    <br>
 			    <p>This page showcases my abilities in designing websites with HTML and CSS. I intend to add some Javascript elements to this page as soon as I 
 			    decide what to make.</p>
+		    </div>
+	    </div>
 
 
             <div class = "col">
