--- a/Projects.html
+++ b/Projects.html
@@ -111,7 +111,7 @@
 		    <h1>Software and Web Builds</h1>
 		    <div class = "col">
 			    <h3>This Profile Page</h3>
-			    <img src="https://transfilmjunkie.github.io/tfjprofile/images/profile.png" alt= "profile homepage" class="img-thumbnail" />
+			    <img src="https://transfilmjunkie.github.io/tfjprofile/images/profile.png" alt= "profile homepage" class="img-thumbnail" width="25%" height="25%"  />
 			  
 			    <a href="https://github.com/TransFilmJunkie/tfjprofile"> Click the link to view the Github repository for this build</a>
 			    <br>
