--- a/Blog.html
+++ b/Blog.html
@@ -51,6 +51,18 @@
     </header>
 
     <main>
+	    <div class = "row">
+        <div class = "col-lg">
+		<p><b>Testing Amazon Photos Access</b></p>
+		<p><b>Entry Date: June 9th, 2024</b></p>
+			<p>&nbsp; &nbsp; &nbsp; &#9579;</p>
+			<p>This is a test of uploading and viewing an image stored on the Amazon Photos app for an upcoming project</p>
+		<img src="https://www.amazon.com/photos/shared/99NJla1JSumEYJlj2daIRA.cZQbvfNCisTPxVzsrn2m50" alt="rollercoaster tycoon screenshot" class="img-thumbnail" />
+
+	    <br>
+				<p>&nbsp; &nbsp; &nbsp; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579;</p>
+				<br>
+	    
 	<div class = "row">
         <div class = "col-lg">
             <p><b>Goodbye for Now, React
