--- a/Blog.html
+++ b/Blog.html
@@ -57,7 +57,7 @@
 		<p><b>Entry Date: June 9th, 2024</b></p>
 			<p>&nbsp; &nbsp; &nbsp; &#9579;</p>
 			<p>This is a test of uploading and viewing an image stored on the Amazon Photos app for an upcoming project</p>
-		<img src="https://www.amazon.com/photos/shared/99NJla1JSumEYJlj2daIRA.cZQbvfNCisTPxVzsrn2m50" alt="rollercoaster tycoon screenshot" class="img-thumbnail" />
+		<img src="https://thumbnails-photos.amazon.com/v1/thumbnail/AwSpeQb4SvSI-8E32Jpjdg?ownerId=A1JL2C6EILGQYH&viewBox=933%2C700&groupShareToken=je2ZkbC-TeS6_RVJ0AHI5A.1jb7nSoi_P3lrpCb4Ea_nE" alt="rollercoaster tycoon screenshot" class="img-thumbnail" />
 
 	    <br>
 				<p>&nbsp; &nbsp; &nbsp; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579; &#9579;</p>
